# llm_learn

./: .env  pyproject.toml
src/01_LLM初体验/: test.py
src/02_智普ai/: test.py  test2.py  test3.py  test4.py  test5.py
src/03_新闻数据/: test.py
src/Langchain/zhipu/: module.py  test.ipynb  zhipuai_llm.py  检索问答链.py
src/RAG体验/GPT/: embeddings.py
src/RAG体验/ZHIPU/: check.py  db.py  embeddings.py  load_data.py  zhipuai_embedding.py
src/RAG体验/ZHIPU/db/: chroma.sqlite3
src/gongyinglian/: main.py
src/提示工程试验/: Prompt.py  zhipu.py
src/最小单位示例/: chatGLM.py  chatGPT.py  qianFan.py
src/简易框架/: zhipu.py
